# mihomo-tracker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  api.md
backend/: Cargo.toml  run_agent.bat  run_agent.sh  run_master.bat  run_master.sh
backend/scripts/: run_agent_openwrt.sh
backend/scripts/openwrt/init.d/: mihomo-tracker
backend/src/: agent.rs  api.rs  common.rs  config.rs  db.rs  logger.rs  main.rs  master.rs
backend/tests/: logging_tests.rs
frontend/: README.md  package-lock.json  package.json
frontend/app/: client-layout.tsx  layout.tsx  settings-context.tsx  timezone-context.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/_components/: filters-popover.tsx  grouped-stats.tsx  stat-cards.tsx  time-series-chart.tsx
frontend/app/dashboard/agents/: page.tsx
frontend/components/: empty-state.tsx  error-banner.tsx  page-header.tsx  page-size-select.tsx  pagination.tsx  refresh-button.tsx  search-input.tsx  settings-dialog.tsx  sortable-table-head.tsx  table-pagination-footer.tsx  theme-toggle.tsx  traffic-table-cells.tsx
frontend/components/ui/: popover.tsx
frontend/hooks/: use-api-config.ts  use-api-polling.ts  use-page-size.ts  use-polling.ts  use-sort.ts
frontend/hooks/__tests__/: use-api-polling.test.tsx  use-page-size.test.ts  use-polling.test.tsx  use-sort.test.ts
frontend/lib/: api.ts  constants.ts  utils.ts
frontend/lib/__tests__/: api.test.ts  utils.test.ts
frontend/providers/: theme-provider.tsx
frontend/types/: api.ts
(+6 files in other folders)
