[package]
edition = "2021"
name = "mihomo-tracker"
version = "0.1.0"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
urlencoding = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2.5"
warp = { version = "0.4", features = ["websocket", "server"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
